# 2025_20679055

./: .gitignore  README.md  adder_8h.html  adder_8h_source.html  doxygen_crawl.html  files.html  git-cheat-sheet.txt  hi_and_date.cmd
.github/workflows/: doxygen-deploy.yml
Worksheet3/: adder.h  libadder.exp  libadder.lib
Worksheet3/adder_static/include/: adder.h
Worksheet3/adder_static/lib/: libadder.lib
Worksheet4/Calc/: CMakeLists.txt  adder.cpp  calc.cpp
Worksheet4/hello_cmake/: hello.cpp
Worksheet5/: CMakeLists.txt  adder.h
Worksheet5/html/: adder_8h.html  adder_8h_source.html  files.html  globals.html  globals_func.html
Worksheet5/latex/: adder_8h.tex  adder_8h_source.tex  files.tex
Worksheet6/ProjectQt/: CMakeLists.txt  ModelPart.cpp  ModelPart.h  ModelPartList.h  icons.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  optiondialog.cpp  optiondialog.h  optiondialog.ui
Worksheet7/Exercise3/src/: CMakeLists.txt  ModelPart.cpp  ModelPart.h  ModelPartList.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.qrc
